force-app/main/default/objects/SalesforceDocActivity__x/SalesforceDocActivity__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceDocActivity</externalName>
    <label>Attività Documentale Salesforce</label>
    <pluralLabel>Attività Documentali Salesforce</pluralLabel>
</CustomObject>