force-app/main/default/objects/SalesforceDocActivity__x/fields/ActivityTypeC__c.field-meta.xml
<CustomField>
    <fullName>ActivityTypeC__c</fullName>
    <description>ActivityTypeC</description>
    <externalDeveloperName>ActivityTypeC</externalDeveloperName>
    <label>ActivityTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>