force-app/main/default/objects/SalesforceDocActivity__x/fields/AttachmentCodeC__c.field-meta.xml
<CustomField>
    <fullName>AttachmentCodeC__c</fullName>
    <description>AttachmentCodeC</description>
    <externalDeveloperName>AttachmentCodeC</externalDeveloperName>
    <label>Codice Allegato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>