force-app/main/default/objects/SalesforceDocActivity__x/fields/AttachmentDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>AttachmentDescriptionC__c</fullName>
    <description>AttachmentDescriptionC</description>
    <externalDeveloperName>AttachmentDescriptionC</externalDeveloperName>
    <label>AttachmentDescriptionC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>