force-app/main/default/objects/SalesforceDocActivity__x/fields/OrderIdC__c.field-meta.xml
<CustomField>
    <fullName>OrderIdC__c</fullName>
    <description>OrderIdC</description>
    <externalDeveloperName>OrderIdC</externalDeveloperName>
    <label>OrderIdC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>