force-app/main/default/objects/SalesforceDocActivity__x/fields/SignatureDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>SignatureDescriptionC__c</fullName>
    <description>SignatureDescriptionC</description>
    <externalDeveloperName>SignatureDescriptionC</externalDeveloperName>
    <label>Descrizione Firma</label>
    <length>255</length>
    <type>Text</type>
</CustomField>